--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width: 767px)" />
+		<link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width: 768px)" />
+		<link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width: 1158px)" />
 	</head>
 	<body>
 		<!-- Header -->
-		<header class="page-header">
-			<!-- Logo -->
+		<!-- <header class="page-header">
 			<div class="container header">
 				<nav class="header-nav">
-					<a href="./index.html" class="logo link">Web<span>Studio</span></a>
-					<!-- Navigation -->
+					<a href="./index.html" class="logo link">Web<span class="logo-desc">Studio</span></a>
 					<ul class="header-list list">
 						<li class="header-item">
 							<a href="./index.html" class="header-link link active">Studio</a>
@@ -40,7 +41,6 @@
 						</li>
 					</ul>
 				</nav>
-				<!-- Contacts -->
 				<address class="contacts">
 					<ul class="contacts-list list">
 						<li class="contacts-item"
@@ -50,18 +50,18 @@
 					</ul></address
 				>
 			</div>
-		</header>
+		</header> -->
 		<!-- Main -->
 		<main>
 			<!-- Hero section -->
-			<section class="hero-section">
+			<!-- <section class="hero-section">
 				<div class="container">
 					<h1 class="hero-title"> Effective Solutions for Your Business </h1>
 					<button type="button" data-modal-open class="hero-button">Order Service</button>
 				</div>
-			</section>
+			</section> -->
 			<!-- Section 1 -->
-			<section class="section">
+			<section class="feature-section">
 				<div class="container">
 					<h2 class="visually-hidden">Characteristics</h2>
 					<ul class="feature-list list">
@@ -339,44 +339,48 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="footer-container container">
-				<div class="footer-logo-container">
-					<a class="logo link" href="./index.html">Web<span class="logo-desc">Studio</span></a>
-					<p class="footer-text"
-						>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p
-					>
-				</div>
-				<div class="footer-social-container">
-					<h2 class="footer-title">Social media</h2>
-					<ul class="footer-list list">
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-instagram"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-twitter"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-facebook"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-linkedin"></use>
-								</svg>
-							</a>
-						</li>
-					</ul>
+				<div class="footer-wrap">
+					<div class="footer-logo-container">
+						<span class="footer-logo-wrap"
+							><a class="footer-logo link" href="./index.html">Web<span class="footer-logo-desc">Studio</span></a></span
+						>
+						<p class="footer-text"
+							>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p
+						>
+					</div>
+					<div class="footer-social-container">
+						<h2 class="footer-title">Social media</h2>
+						<ul class="footer-list list">
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 				<div class="footer-form-container">
 					<p class="footer-title">Subscribe</p>
@@ -393,7 +397,7 @@
 			</div>
 		</footer>
 		<!-- Modal -->
-		<div class="backdrop is-hidden" data-modal>
+		<!-- <div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button type="button" class="close-button" data-modal-close>
 					<svg class="modal-icon" width="8" height="8">
@@ -441,6 +445,6 @@
 				</form>
 			</div>
 		</div>
-		<script src="./js/modal.js"></script>
+		<script src="./js/modal.js"></script> -->
 	</body>
 </html>
