--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 			<!-- Logo -->
 			<div class="container header">
 				<nav class="header-nav">
-					<a href="./index.html" class="logo link">Web<span>Studio</span></a>
+					<a href="./index.html" class="logo link">Web<span class="logo-desc">Studio</span></a>
 					<!-- Navigation -->
 					<ul class="header-list list">
 						<li class="header-item">
@@ -218,7 +218,9 @@
 		<footer class="footer">
 			<div class="footer-container container">
 				<div class="footer-logo-container">
-					<a class="logo link" href="./index.html">Web<span class="logo-desc">Studio</span></a>
+					<span class="footer-logo-wrap"
+						><a class="footer-logo link" href="./index.html">Web<span class="footer-logo-desc">Studio</span></a></span
+					>
 					<p class="footer-text"
 						>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p
 					>
