--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<!-- Header -->
-		<!-- <header class="page-header">
+		<header class="page-header">
 			<div class="container header">
 				<nav class="header-nav">
 					<a href="./index.html" class="logo link">Web<span class="logo-desc">Studio</span></a>
@@ -41,6 +41,11 @@
 						</li>
 					</ul>
 				</nav>
+				<button class="mob-menu-btn" type="button" data-menu-open>
+					<svg class="mob-menu-icon" width="32" height="22">
+						<use href="/images/icons.svg#icon-burger"></use>
+					</svg>
+				</button>
 				<address class="contacts">
 					<ul class="contacts-list list">
 						<li class="contacts-item"
@@ -50,16 +55,77 @@
 					</ul></address
 				>
 			</div>
-		</header> -->
+			<div class="mobile-menu" data-menu>
+				<div class="container mob-menu-container">
+					<button type="button" class="close-button menu" data-menu-close>
+						<svg class="modal-icon" width="8" height="8">
+							<use href="./images/icons.svg#icon-close-modal"></use>
+						</svg>
+					</button>
+					<ul class="menu-header-list list">
+						<li class="menu-header-item">
+							<a href="./index.html" class="menu-header-link link">Studio</a>
+						</li>
+						<li class="menu-header-item">
+							<a href="./portfolio.html" class="menu-header-link link">Portfolio</a>
+						</li>
+						<li class="menu-header-item">
+							<a href="" class="menu-header-link link">Contacts</a>
+						</li>
+					</ul>
+					<address class="menu-contacts">
+						<ul class="menu-contacts-list list">
+							<li class="menu-contacts-item"
+								><a href="tel:+110001111111" class="menu-contacts-tel link">+11 (000) 111-11-11</a></li
+							>
+							<li class="menu-contacts-item"
+								><a href="mailto:info@devstudio.com" class="menu-contacts-mail link">info@devstudio.com</a></li
+							>
+						</ul>
+					</address>
+					<ul class="social-media-list menu list">
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</header>
 		<!-- Main -->
 		<main>
 			<!-- Hero section -->
-			<!-- <section class="hero-section">
+			<section class="hero-section">
 				<div class="container">
 					<h1 class="hero-title"> Effective Solutions for Your Business </h1>
 					<button type="button" data-modal-open class="hero-button">Order Service</button>
 				</div>
-			</section> -->
+			</section>
 			<!-- Section 1 -->
 			<section class="feature-section">
 				<div class="container">
@@ -135,7 +201,12 @@
 					<h2 class="main-title">Our Team</h2>
 					<ul class="team-list list">
 						<li class="team-item">
-							<img src="./images/img4.jpg" alt="Mark Guerrero" width="264" />
+							<img
+								srcset="./images/img4.jpg 1x, ./images/img4-2x.jpg 2x, ./images/img4-3x.jpg 3x"
+								src="./images/img4.jpg"
+								alt="Mark Guerrero"
+								width="264"
+							/>
 							<div class="team-container">
 								<h3 class="section-title">Mark Guerrero</h3>
 								<p class="section-text">Product Designer</p>
@@ -172,7 +243,12 @@
 							</div>
 						</li>
 						<li class="team-item">
-							<img src="./images/img5.jpg" alt="Tom Ford" width="264" />
+							<img
+								srcset="./images/img5.jpg 1x, ./images/img5-2x.jpg 2x, ./images/img5-3x.jpg 3x"
+								src="./images/img5.jpg"
+								alt="Tom Ford"
+								width="264"
+							/>
 							<div class="team-container">
 								<h3 class="section-title">Tom Ford</h3>
 								<p class="section-text">Frontend Developer</p>
@@ -209,7 +285,12 @@
 							</div>
 						</li>
 						<li class="team-item">
-							<img src="./images/img6.jpg" alt="Camila Garcia" width="264" />
+							<img
+								srcset="./images/img6.jpg 1x, ./images/img6-2x.jpg 2x, ./images/img6-3x.jpg 3x"
+								src="./images/img6.jpg"
+								alt="Camila Garcia"
+								width="264"
+							/>
 							<div class="team-container">
 								<h3 class="section-title">Camila Garcia</h3>
 								<p class="section-text">Marketing</p>
@@ -246,7 +327,12 @@
 							</div>
 						</li>
 						<li class="team-item">
-							<img src="./images/img7.jpg" alt="Daniel Wilson" width="264" />
+							<img
+								srcset="./images/img7.jpg 1x, ./images/img7-2x.jpg 2x, ./images/img7-3x.jpg 3x"
+								src="./images/img7.jpg"
+								alt="Daniel Wilson"
+								width="264"
+							/>
 							<div class="team-container">
 								<h3 class="section-title">Daniel Wilson</h3>
 								<p class="section-text">UI Designer</p>
@@ -444,7 +530,8 @@
 					<button type="submit" class="form-btn button">Send</button>
 				</form>
 			</div>
-		</div>
-		<script src="./js/modal.js"></script> -->
+		</div> -->
+		<script src="./js/mob-menu.js"></script>
+		<!-- <script src="./js/modal.js"></script> -->
 	</body>
 </html>
