--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</nav>
 				<button class="mob-menu-btn" type="button" data-menu-open>
 					<svg class="mob-menu-icon" width="32" height="22">
-						<use href="/images/icons.svg#icon-burger"></use>
+						<use href="./images/icons.svg#icon-burger"></use>
 					</svg>
 				</button>
 				<address class="contacts">
@@ -483,7 +483,7 @@
 			</div>
 		</footer>
 		<!-- Modal -->
-		<!-- <div class="backdrop is-hidden" data-modal>
+		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button type="button" class="close-button" data-modal-close>
 					<svg class="modal-icon" width="8" height="8">
@@ -525,13 +525,13 @@
 					</label>
 					<input type="checkbox" id="check" class="form-checkbox visually-hidden" name="check" />
 					<label for="check" class="form-label-checkbox"
-						>I accept the terms and conditions of the&nbsp;<a href="">Privacy Policy</a>
+						>I accept the terms and conditions of the&nbsp;<a class="link-checkbox" href="">Privacy Policy</a>
 					</label>
 					<button type="submit" class="form-btn button">Send</button>
 				</form>
 			</div>
-		</div> -->
+		</div>
 		<script src="./js/mob-menu.js"></script>
-		<!-- <script src="./js/modal.js"></script> -->
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
