--- a/portfolio.html
+++ b/portfolio.html
@@ -19,15 +19,16 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width: 767px)" />
+		<link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width: 768px)" />
+		<link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width: 1158px)" />
 	</head>
 	<body>
 		<!-- Header -->
 		<header class="page-header">
-			<!-- Logo -->
 			<div class="container header">
 				<nav class="header-nav">
 					<a href="./index.html" class="logo link">Web<span class="logo-desc">Studio</span></a>
-					<!-- Navigation -->
 					<ul class="header-list list">
 						<li class="header-item">
 							<a href="./index.html" class="header-link link">Studio</a>
@@ -40,8 +41,11 @@
 						</li>
 					</ul>
 				</nav>
-
-				<!-- Contacts -->
+				<button class="mob-menu-btn" type="button" data-menu-open>
+					<svg class="mob-menu-icon" width="32" height="22">
+						<use href="./images/icons.svg#icon-burger"></use>
+					</svg>
+				</button>
 				<address class="contacts">
 					<ul class="contacts-list list">
 						<li class="contacts-item"
@@ -50,6 +54,67 @@
 						<li class="contacts-item"><a href="tel:+110001111111" class="contacts-tel link">+11 (000) 111-11-11</a></li>
 					</ul></address
 				>
+			</div>
+			<div class="mobile-menu" data-menu>
+				<div class="container mob-menu-container">
+					<button type="button" class="close-button menu" data-menu-close>
+						<svg class="modal-icon" width="8" height="8">
+							<use href="./images/icons.svg#icon-close-modal"></use>
+						</svg>
+					</button>
+					<ul class="menu-header-list list">
+						<li class="menu-header-item">
+							<a href="./index.html" class="menu-header-link link">Studio</a>
+						</li>
+						<li class="menu-header-item">
+							<a href="./portfolio.html" class="menu-header-link link">Portfolio</a>
+						</li>
+						<li class="menu-header-item">
+							<a href="" class="menu-header-link link">Contacts</a>
+						</li>
+					</ul>
+					<address class="menu-contacts">
+						<ul class="menu-contacts-list list">
+							<li class="menu-contacts-item"
+								><a href="tel:+110001111111" class="menu-contacts-tel link">+11 (000) 111-11-11</a></li
+							>
+							<li class="menu-contacts-item"
+								><a href="mailto:info@devstudio.com" class="menu-contacts-mail link">info@devstudio.com</a></li
+							>
+						</ul>
+					</address>
+					<ul class="social-media-list menu list">
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media" width="16" height="16">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</header>
 		<!-- Main -->
@@ -78,7 +143,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-1.jpg" alt="Banking App Interface" width="360" />
+									<img
+										srcset="./images/portfolio-1.jpg 1x, ./images/portfolio-1-2x.jpg 2x, ./images/portfolio-1-3x.jpg 3x"
+										src="./images/portfolio-1.jpg"
+										alt="Banking App Interface"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -93,7 +163,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360" />
+									<img
+										srcset="./images/portfolio-2.jpg 1x, ./images/portfolio-2-2x.jpg 2x, ./images/portfolio-2-3x.jpg 3x"
+										src="./images/portfolio-2.jpg"
+										alt="Cashless Payment"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -108,7 +183,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-3.jpg" alt="Meditaion App" width="360" />
+									<img
+										srcset="./images/portfolio-3.jpg 1x, ./images/portfolio-3-2x.jpg 2x, ./images/portfolio-3-3x.jpg 3x"
+										src="./images/portfolio-3.jpg"
+										alt="Meditaion App"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -123,7 +203,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360" />
+									<img
+										srcset="./images/portfolio-4.jpg 1x, ./images/portfolio-4-2x.jpg 2x, ./images/portfolio-4-3x.jpg 3x"
+										src="./images/portfolio-4.jpg"
+										alt="Taxi Service"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -138,7 +223,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360" />
+									<img
+										srcset="./images/portfolio-5.jpg 1x, ./images/portfolio-5-2x.jpg 2x, ./images/portfolio-5-3x.jpg 3x"
+										src="./images/portfolio-5.jpg"
+										alt="Screen Illustrations"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -153,7 +243,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-6.jpg" alt="Online Courses" width="360" />
+									<img
+										srcset="./images/portfolio-6.jpg 1x, ./images/portfolio-6-2x.jpg 2x, ./images/portfolio-6-3x.jpg 3x"
+										src="./images/portfolio-6.jpg"
+										alt="Online Courses"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -168,7 +263,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-7.jpg" alt="Instagram Stories Concept" width="360" />
+									<img
+										srcset="./images/portfolio-7.jpg 1x, ./images/portfolio-7-2x.jpg 2x, ./images/portfolio-7-3x.jpg 3x"
+										src="./images/portfolio-7.jpg"
+										alt="Instagram Stories Concept"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -183,7 +283,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-8.jpg" alt="Organic Food" width="360" />
+									<img
+										srcset="./images/portfolio-8.jpg 1x, ./images/portfolio-8-2x.jpg 2x, ./images/portfolio-8-3x.jpg 3x"
+										src="./images/portfolio-8.jpg"
+										alt="Organic Food"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -198,7 +303,12 @@
 						<li class="portfolio-item">
 							<a href="" class="portfolio-link link">
 								<div class="portfolio-wrap">
-									<img src="./images/portfolio-9.jpg" alt="Fresh Coffee" width="360" />
+									<img
+										srcset="./images/portfolio-9.jpg 1x, ./images/portfolio-9-2x.jpg 2x, ./images/portfolio-1-3x.jpg 3x"
+										src="./images/portfolio-9.jpg"
+										alt="Fresh Coffee"
+										width="360"
+									/>
 									<p class="portfolio-desc-overlay"
 										>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
 										Fruit Ecommerce App · Cloud Storage App</p
@@ -217,46 +327,48 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="footer-container container">
-				<div class="footer-logo-container">
-					<span class="footer-logo-wrap"
-						><a class="footer-logo link" href="./index.html">Web<span class="footer-logo-desc">Studio</span></a></span
-					>
-					<p class="footer-text"
-						>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p
-					>
-				</div>
-				<div class="footer-social-container">
-					<h2 class="footer-title">Social media</h2>
-					<ul class="footer-list list">
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-instagram"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-twitter"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-facebook"></use>
-								</svg>
-							</a>
-						</li>
-						<li class="footer-item">
-							<a href="" class="footer-link link">
-								<svg width="24" height="24">
-									<use href="./images/icons.svg#icon-linkedin"></use>
-								</svg>
-							</a>
-						</li>
-					</ul>
+				<div class="footer-wrap">
+					<div class="footer-logo-container">
+						<span class="footer-logo-wrap"
+							><a class="footer-logo link" href="./index.html">Web<span class="footer-logo-desc">Studio</span></a></span
+						>
+						<p class="footer-text"
+							>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p
+						>
+					</div>
+					<div class="footer-social-container">
+						<h2 class="footer-title">Social media</h2>
+						<ul class="footer-list list">
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="footer-item">
+								<a href="" class="footer-link link">
+									<svg width="24" height="24">
+										<use href="./images/icons.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 				<div class="footer-form-container">
 					<p class="footer-title">Subscribe</p>
@@ -272,6 +384,6 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/modal.js"></script>
+		<script src="./js/mob-menu.js"></script>
 	</body>
 </html>
